--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -28,6 +28,7 @@
       <select name="queryList" id="queryList" class="form-select">
         <option value="">Select a query</option>
       </select>
+      <div id="queryListHelp" class="form-text">^ Load your saved queries from this list.</div>
     </div>
 
     <form>
@@ -52,9 +53,12 @@
         <textarea id="query" rows="5" class="form-control" placeholder="query { Customer { CustomerID }}"></textarea>
       </div>
     </form>
+    <p id="alertMsg" class="alert alert-secondary"></p>
     <button id="save" class="btn btn-primary">Save 💾</button>
     <button id="del" class="btn btn-danger">Delete 🗑️</button>
     <button id="run" class="btn btn-success">Run ▶️</button>
+    <br />
+    <button id="clearAlertMsg" class="btn btn-sm btn-secondary mt-3">[x] Click to clear alert message</button>
 
     <!-- Bootstrap JS Bundle -->
     <script
